# broadphase-rs

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: Cargo.toml
data/src/: lib.rs
docs/images/: visualization.apng
examples/: main.rs
src/: geom.rs  index.rs  layer.rs  lib.rs  traits.rs
tests/: gen_test_scenes.py  gen_validation_data.py  test_layer.rs
tests/data/inputs/: boxes-seed_0-d_1_1000-s_1_10-n_000100.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_000300.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_001000.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_003000.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_010000.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_030000.br_scene  boxes-seed_0-d_1_1000-s_1_10-n_100000.br_scene
tests/data/validation/: 0_layer_unsorted.br_scene  1_layer_sorted.br_scene  2_layer_collisions.br_scene
utils/: Cargo.toml
utils/src/: gen_test_data.rs
