[package]
name = "broadphase"
publish = false
version = "0.1.0"
authors = ["zvxryb@gmail.com"]

[profile.release]
debug = true
lto = false

[features]
default = ["parallel"]
parallel = ["rayon", "thread_local"]

[dependencies]
cgmath = "^0.17.0"
log = "^0.4.6"
num-traits = "^0.2.6"
rayon = {version="^1.0.3", optional=true}
smallvec = "^0.6.8"
thread_local = {version="^0.3.6", optional=true}

[dev-dependencies]
env_logger = "^0.6.0"
ggez = {path="./third_party/ggez"}
rand = "^0.6.4"
rand_chacha = "^0.1.1"
specs = "^0.14.3"