[package]
name = "broadphase"
publish = false
version = "0.1.0"
authors = ["Michael Lodato <zvxryb@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
lto = false

[features]
default = ["parallel"]
parallel = ["rayon", "thread_local"]

[dependencies]
cgmath = "^0.17.0"
log = "^0.4.6"
num-traits = "^0.2.6"
rayon = {version="^1.0.3", optional=true}
rustc-hash = "^1.0.1"
smallvec = "^1.2"
serde = {version="^1.0.89", optional=true, features=["derive"]}
thread_local = {version="^1.0", optional=true}

[dev-dependencies]
broadphase_data = {path="./data"}
env_logger = "^0.7.0"
ggez = {path="./third_party/ggez"}
lazy_static = "^1.3.0"
rand = "^0.7.0"
rand_chacha = "^0.2.0"
serde = {version="^1.0.89", features=["derive"]}
specs = "^0.16.0"