[package]
name = "zvxryb-broadphase"
description = "A broadphase collision detection library"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/zvxryb-broadphase"
repository = "https://github.com/zvxryb/broadphase-rs"
publish = ["crates-io"]
version = "0.1.2"
authors = ["Michael Lodato <zvxryb@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
lto = false

[features]
default = ["parallel"]
parallel = ["rayon", "thread_local"]

[dependencies]
cgmath = "^0.17.0"
log = "^0.4.6"
num-traits = "^0.2.6"
rayon = {version="^1.0", optional=true}
rustc-hash = "^1.0"
smallvec = "^1.2"
serde = {version="^1.0", optional=true, features=["derive"]}
thread_local = {version="^1.0", optional=true}

[dev-dependencies]
backtrace = "0.3"
broadphase_data = {path="./data"}
env_logger = "^0.7.0"
glium = "^0.26.0"
lazy_static = "^1.3"
rand = "^0.7.0"
rand_chacha = "^0.2.0"
scopeguard = "1.1"
serde = {version="^1.0", features=["derive"]}
specs = "^0.16.0"