[package]
name = "broadphase_utils"
publish = false
version = "0.1.0"
authors = ["Michael Lodato <zvxryb@gmail.com>"]
edition = "2018"

[dependencies]
zvxryb-broadphase = {path=".."}
broadphase_data = {path="../data"}
cgmath = "^0.17.0"
clap = "^2.31.2"
glium = "^0.26.0"
rand = "^0.7.0"
rand_chacha = "^0.2.0"

[[bin]]
name = "gen_test_data"
path = "src/gen_test_data.rs"